--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.2
   path_provider: ^2.1.5
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
